--- a/style.css
+++ b/style.css
@@ -7,3 +7,17 @@ header{
 .img-card{
     height: 150px;
 }
+
+.carousel-item video {
+    width: 100%;
+    height: 554px;
+    object-fit: cover;
+    object-position:50%;
+}
+
+#head .carousel-inner {
+    margin-top: 20px;
+    width: 100%;
+}
+
+
