--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@ header{
 .img-card{
     height: 150px;
 }
+.carousel-item{
+    width: 100%;
+height: 554px;
+object-fit: cover;
+object-position:50%;
+}
