--- a/styles/falafel.css
+++ b/styles/falafel.css
@@ -5,3 +5,30 @@ header{
     width:100%;
     height:auto;
   }
+
+.img-carousel{
+    height: 600px;
+}
+.img-card{
+    height: 150px;
+}
+.carousel-item{
+    width: 100%;
+    height: 554px;
+    object-fit: cover;
+    object-position:50%;
+}
+
+.carousel-item video {
+    width: 100%;
+    height: 554px;
+    object-fit: cover;
+    object-position:50%;
+}
+
+#head .carousel-inner {
+    margin-top: 20px;
+    width: 100%;
+}
+
+
